# mcfunction-rs-1

./: Cargo.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs
