[package]
name = "mcfunction-cli"
version = "0.0.1"
authors = ["Levertion"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yurihaia/mcfunction-rs/tree/master/crates/levertion-command-line"
description = "A command line tool for validating datapacks and collections of datapacks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcfunction-parse = { path = "../parse", version = "0.0.1" }
mcfunction-db = { path = "../db", version = "0.0.1" }
util = { path = "../util", version = "0.0.1" }
mcfunction-mcf = { path="../mcf", version="0.0.1" }
relative-path = "1.0.0"
salsa = "0.14.1"
codespan-reporting = "0.9.1"
structopt = "0.3.12"
clap = "2.33.0"

[dev-dependencies]
insta = "0.13.1"
